Dodano imie i nazwisko autora folderu

--- a/strona.html
+++ b/strona.html
@@ -6,6 +6,8 @@
 	<title></title>
 </head>
 <body>
+	<p>Grzegorz</p><br>
+	<p>Wojtczak</p>
 	<img src="imag.png"><br>
 	<img src="images.png">
 </body>
